Fixed critical issues reported by sonar (Performance - Method invokes inefficient Number constructor; use static valueOf instead)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63805 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261